INCLUDE(Common)
INCLUDE(FindCAS)

SET(PROJECT_HEADERS
    GeomData.h
    GeomData_Point.h
    GeomData_Dir.h
    GeomData_Point2D.h
)

SET(PROJECT_SOURCES
    GeomData_Point.cpp
    GeomData_Dir.cpp
    GeomData_Point2D.cpp
)

ADD_DEFINITIONS(-DGEOMDATA_EXPORTS ${CAS_DEFINITIONS} ${BOOST_DEFINITIONS})
ADD_LIBRARY(GeomData SHARED ${PROJECT_SOURCES} ${PROJECT_HEADERS})
TARGET_LINK_LIBRARIES(GeomData ${PROJECT_LIBRARIES} ${CAS_OCAF} ModelAPI GeomAPI)

INCLUDE_DIRECTORIES(
  ../ModelAPI
  ../GeomDataAPI
  ../GeomAPI
  ../Events
  ../Config
  ${CAS_INCLUDE_DIRS}
)

INSTALL(TARGETS GeomData DESTINATION bin)
