## Copyright (C) 2014-20xx CEA/DEN, EDF R&D

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE(UnitTest)

SET(PROJECT_HEADERS
    GeomDataAPI.h
    GeomDataAPI_Point.h
    GeomDataAPI_Dir.h
    GeomDataAPI_Point2D.h
)

SET(PROJECT_SOURCES
    GeomDataAPI_Point.cpp
    GeomDataAPI_Dir.cpp
    GeomDataAPI_Point2D.cpp
)

SET(PROJECT_LIBRARIES
    ModelAPI
)

INCLUDE_DIRECTORIES( 
  ../ModelAPI
)

ADD_DEFINITIONS(-DGEOMDATAAPI_EXPORTS)
ADD_LIBRARY(GeomDataAPI SHARED ${PROJECT_SOURCES} ${PROJECT_HEADERS})
SET_TARGET_PROPERTIES(GeomDataAPI PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(GeomDataAPI ${PROJECT_LIBRARIES})

SET(CMAKE_SWIG_FLAGS "-Wall")

SET_SOURCE_FILES_PROPERTIES(GeomDataAPI.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(GeomDataAPI.i PROPERTIES SWIG_DEFINITIONS "-shadow")

SET(SWIG_SCRIPTS
  ${CMAKE_CURRENT_BINARY_DIR}/GeomDataAPI.py
)

SET(SWIG_LINK_LIBRARIES
  GeomDataAPI
  ${PYTHON_LIBRARIES}
)

SWIG_ADD_MODULE(GeomDataAPI python GeomDataAPI.i ${PROJECT_HEADERS})
SWIG_LINK_LIBRARIES(GeomDataAPI ${SWIG_LINK_LIBRARIES})

IF(WIN32)
  SET_TARGET_PROPERTIES(_GeomDataAPI PROPERTIES DEBUG_OUTPUT_NAME _GeomDataAPI_d)
ENDIF(WIN32)

INSTALL(TARGETS GeomDataAPI DESTINATION bin)
INSTALL(TARGETS _GeomDataAPI DESTINATION swig)
INSTALL(FILES ${SWIG_SCRIPTS} DESTINATION swig)

ADD_UNIT_TESTS(TestConstants.py)
